# Maze

./: .gitignore  CMakeLists.txt  README.md
Assets/: frag.glsl  vert.glsl
cmake/: FindSFML.cmake  safeguards.cmake
src/: Camera.cpp  Camera.hpp  Cell.cpp  Cell.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  MazeGame.cpp  MazeGame.hpp  MeshLoader.cpp  MeshLoader.hpp  Vertex.hpp  main.cpp
